iPad scroll headerjump fix 2

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -282,8 +282,6 @@ $widthMidCol: 36%;
 
 .screen-top {
     padding-top: 55px;
-
-    height: 800px;
 }
 
 .col {
